Работаю над страницей добавления объявлений

--- a/pages/add_ad.html
+++ b/pages/add_ad.html
@@ -319,6 +319,7 @@
                                 <div class="col-12 col-md-4 col-lg-9 tech-options">
 
                                     <div class="form-row">
+
                                         <div class="col-4 col-lg-4">
                                             <div class="form-row pt-2">
                                                 <div class="col-12">
@@ -340,7 +341,7 @@
                                             </div>
                                         </div>
                                         <div class="col-lg-4">
-                                            <div class="form-row">
+                                            <div class="form-row pt-2">
                                                 <div class="col-12">
                                                     <label for="input-type-printer">Тип устройства</label>
                                                 </div>
@@ -360,7 +361,7 @@
                                             </div>
                                         </div>
                                         <div class="col-lg-4">
-                                            <div class="form-row">
+                                            <div class="form-row pt-2">
                                                 <div class="col-12">
                                                     <label>Цветность</label>
                                                 </div>
@@ -377,7 +378,7 @@
                                             </div>
                                         </div>
                                         <div class="col-4 col-lg-4">
-                                            <div class="form-row">
+                                            <div class="form-row pt-2">
                                                 <div class="col-12">
                                                     <label>Двусторонняя печать</label>
                                                 </div>
@@ -394,7 +395,7 @@
                                             </div>
                                         </div>
                                         <div class="col-4 col-lg-4">
-                                            <div class="form-row">
+                                            <div class="form-row pt-2">
                                                 <div class="col-12">
                                                     <label>Автоподатчик оригиналов</label>
                                                 </div>
@@ -411,7 +412,7 @@
                                             </div>
                                         </div>
                                         <div class="col-4 col-lg-4">
-                                            <div class="form-row">
+                                            <div class="form-row pt-2">
                                                 <div class="col-12">
                                                     <label>Макс. формат печати</label>
                                                 </div>
@@ -425,7 +426,7 @@
                                             </div>
                                         </div>
                                         <div class="col-4 col-lg-4">
-                                            <div class="form-row">
+                                            <div class="form-row pt-2">
                                                 <div class="col-12">
                                                     <label>Интерфейсы подключения</label>
                                                 </div>
@@ -464,7 +465,7 @@
                                             </div>
                                         </div>
                                         <div class="col-4 col-lg-4">
-                                            <div class="form-row">
+                                            <div class="form-row pt-2">
                                                 <div class="col-12">
                                                     <label>Комплектация</label>
                                                 </div>
@@ -474,7 +475,7 @@
                                             </div>
                                         </div>
                                         <div class="col-4 col-lg-4">
-                                            <div class="form-row">
+                                            <div class="form-row pt-2">
                                                 <div class="col-12">
                                                     <label>Пробег (отпечатано страниц)</label>
                                                 </div>
@@ -491,7 +492,16 @@
 
                                 </div>
                             </div>
-
+                            <div class="form-row pt-3">
+                                <div class="col-lg-3">
+                                    <label>Фотографии:</label>
+                                </div>
+                                <div class="col-12 col-md-4 col-lg-9 add-images">
+                                    <a href="#page">
+                                        <img src="" alt="">
+                                    </a>
+                                </div>
+                            </div>
 
                         </form>
                     </div>
