--- a/pages/add_ad.html
+++ b/pages/add_ad.html
@@ -496,10 +496,21 @@
                                 <div class="col-lg-3">
                                     <label>Фотографии:</label>
                                 </div>
-                                <div class="col-12 col-md-4 col-lg-9 add-images">
-                                    <a href="#page">
-                                        <img src="" alt="">
-                                    </a>
+                                <div class="col-12 col-md-4 col-lg-9">
+                                    <div class="mr-1 float-left upload-images">
+                                        <img class="img-thumbnail" src="../img/printer_add_ad.jpg">
+                                        <label class="rounded-circle remove-image text-center"><span class="fa fa-remove"></span></label>
+                                    </div>
+                                    <div class="mr-1 float-left upload-images">
+                                        <img class="img-thumbnail" src="../img/printer_add_ad.jpg">
+                                        <label class="rounded-circle remove-image text-center"><span class="fa fa-remove"></span></label>
+                                    </div>
+                                    <div class="mr-1 float-left border rounded text-center upload-new">
+                                        <div class="align-self-center">
+                                            <span class="fa fa-plus-circle"></span>
+                                        </div>
+
+                                    </div>
                                 </div>
                             </div>
 
