Работаю над страницей добавления объявления

--- a/pages/add_ad.html
+++ b/pages/add_ad.html
@@ -505,11 +505,14 @@
                                         <img class="img-thumbnail" src="../img/printer_add_ad.jpg">
                                         <label class="rounded-circle remove-image text-center"><span class="fa fa-remove"></span></label>
                                     </div>
-                                    <div class="mr-1 float-left border rounded text-center align-items-center upload-new">
-                                        <div class="align-self-center">
-                                            <span class="fa fa-plus-circle"></span>
+                                    <div class="mr-1 float-left border rounded text-center upload-new">
+                                        <div class="row">
+                                            <div class="col align-self-center">
+                                                <a href="">
+                                                    <span class="fa fa-plus-circle"></span>
+                                                </a>
+                                            </div>
                                         </div>
-
                                     </div>
                                 </div>
                             </div>
