--- a/pages/add_ad.html
+++ b/pages/add_ad.html
@@ -511,6 +511,7 @@
                                                 <a href="">
                                                     <span class="fa fa-plus-circle"></span>
                                                 </a>
+                                                <input id="image-add" type="file" name="name"/>
                                             </div>
                                         </div>
                                     </div>
@@ -581,6 +582,7 @@
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
 <script src="../js/main.js"></script>
+<script src="../js/add_ad.js"></script>
 
 </body>
 </html>
