Сделал кнопку загрузки изображений к объявлению

--- a/pages/add_ad.html
+++ b/pages/add_ad.html
@@ -508,12 +508,10 @@
                                     <div class="mr-1 float-left border rounded text-center upload-new">
                                         <div class="row">
                                             <div class="col align-self-center">
-                                                <a href="">
-                                                    <span class="fa fa-plus-circle"></span>
-                                                </a>
-                                                <input id="image-add" type="file" name="name"/>
+                                                <span class="fa fa-plus-circle"></span>
                                             </div>
                                         </div>
+                                        <input id="image-add" type="file" name="image-name"/>
                                     </div>
                                 </div>
                             </div>
