Работаю над Безопасной сделкой в добавлении объявления

--- a/pages/add_ad.html
+++ b/pages/add_ad.html
@@ -228,7 +228,7 @@
             <div class="tab-content" id="pills-tabContent">
                 <div class="tab-pane fade show active" id="pills-print" role="tabpanel" aria-labelledby="pills-print-tab">
                     <div class="col">
-                        <form action="#">
+                        <form action="#page">
                             <div class="form-row">
                                 <div class="col-12 col-md-4 col-lg-3">
                                     <label for="select-category">Категория:</label>
@@ -310,6 +310,17 @@
                                 </div>
                                 <div class="col-12 col-md-4 col-lg-9">
                                     <input type="text" id="input-address" class="form-control" placeholder="Введите адрес нахождения принтера">
+                                </div>
+                            </div>
+                            <div class="form-row pt-3 safe-trade">
+                                <div class="col-lg-3">
+                                    <label for="select-safe-trade">Безопасная сделка:</label>
+                                </div>
+                                <div class="col-12 col-md-4 col-lg-3">
+                                    <select class="form-control" id="select-safe-trade">
+                                        <option>Новое</option>
+                                        <option>Б/У</option>
+                                    </select>
                                 </div>
                             </div>
                             <div class="form-row pt-3">
