Немного стилизую кнопки в доп разделе

--- a/pages/add_ad.html
+++ b/pages/add_ad.html
@@ -580,7 +580,7 @@
                                                     <input type="text" id="input-part-number-compability" class="form-control form-control-sm" placeholder="Введите парт номер">
                                                 </div>
                                                 <div class="col-2 mb-3">
-                                                    <button type="button" class="btn btn-warning btn-sm w-100"><span class="fa fa-plus-circle"></span></button>
+                                                    <button type="button" class="btn btn-warning btn-sm w-100 btn-add-compabil-model"><span class="fa fa-plus-circle"></span></button>
                                                 </div>
 
                                                 <div class="col-6 p-2">
