--- a/pages/add_ad.html
+++ b/pages/add_ad.html
@@ -577,10 +577,10 @@
                                                     <label>Совместимые парт-номера</label>
                                                 </div>
                                                 <div class="col-10 mb-3">
-                                                    <input type="text" id="input-part-number-compability" class="form-control form-control-sm" placeholder="Введите парт номер">
+                                                    <input type="text" id="input-part-number-compability" class="form-control form-control-sm input-compabil-part" placeholder="Введите парт номер">
                                                 </div>
                                                 <div class="col-2 mb-3">
-                                                    <button type="button" class="btn btn-warning btn-sm w-100 btn-add-compabil-model"><span class="fa fa-plus-circle"></span></button>
+                                                    <button type="button" class="btn btn-warning btn-sm w-100 btn-add-compabil-part"><span class="fa fa-plus-circle"></span></button>
                                                 </div>
 
                                                 <div class="col-6 p-2">
@@ -610,7 +610,7 @@
                                                     <label>Подходит для принтеров</label>
                                                 </div>
                                                 <div class="col-12 mb-3">
-                                                    <button type="button" class="btn btn-primary btn-sm w-100" data-toggle="modal" data-target="#compability-model-modal">Добавить совместимый принтер</button>
+                                                    <button type="button" class="btn btn-primary btn-sm w-100 btn-add-compabil-model" data-toggle="modal" data-target="#compability-model-modal">Добавить совместимый принтер</button>
                                                     <div class="modal fade" id="compability-model-modal" tabindex="-1" aria-hidden="true">
                                                         <div class="modal-dialog modal-dialog-scrollable">
                                                             <div class="modal-content">
