--- a/pages/add_ad.html
+++ b/pages/add_ad.html
@@ -362,7 +362,7 @@
                                 <div class="col-lg-9">
                                     <div class="form-row">
                                         <div class="col-4">
-                                            <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                                            <div class="btn-group btn-group-toggle w-100" data-toggle="buttons">
                                                 <label class="btn btn-success active btn-sm form-control-sm">
                                                     <input type="radio" name="safe_trade" id="safe-trade-on" autocomplete="off">Да
                                                 </label>
@@ -397,7 +397,7 @@
                                                     <label>Технология печати</label>
                                                 </div>
                                                 <div class="col-12">
-                                                    <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                                                    <div class="btn-group btn-group-toggle w-100" data-toggle="buttons">
                                                         <label class="btn btn-primary active form-control-sm">
                                                             <input type="radio" name="print_tech" id="print-tech-laser" autocomplete="off" checked>Лазерная
                                                         </label>
@@ -417,7 +417,7 @@
                                                     <label for="input-type-printer">Тип устройства</label>
                                                 </div>
                                                 <div class="col-12">
-                                                    <div class="btn-group btn-group-toggle" data-toggle="buttons" id="input-type-printer">
+                                                    <div class="btn-group btn-group-toggle w-100" data-toggle="buttons" id="input-type-printer">
                                                         <label class="btn btn-primary active form-control-sm">
                                                             <input type="radio" name="options" id="type-printer-printer" autocomplete="off" checked>Принтер
                                                         </label>
@@ -437,7 +437,7 @@
                                                     <label>Цветность</label>
                                                 </div>
                                                 <div class="col-12">
-                                                    <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                                                    <div class="btn-group btn-group-toggle w-100" data-toggle="buttons">
                                                         <label class="btn btn-secondary active form-control-sm">
                                                             <input type="radio" name="options" id="type-print-monochrome" autocomplete="off" checked>Черно-белый
                                                         </label>
@@ -454,7 +454,7 @@
                                                     <label>Двусторонняя печать</label>
                                                 </div>
                                                 <div class="col-12">
-                                                    <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                                                    <div class="btn-group btn-group-toggle w-100" data-toggle="buttons">
                                                         <label class="btn btn-primary active form-control-sm">
                                                             <input type="radio" name="print_tech" id="printer-duplex-on" autocomplete="off" checked>Есть
                                                         </label>
@@ -471,7 +471,7 @@
                                                     <label>Автоподатчик оригиналов</label>
                                                 </div>
                                                 <div class="col-12">
-                                                    <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                                                    <div class="btn-group btn-group-toggle w-100" data-toggle="buttons">
                                                         <label class="btn btn-primary active form-control-sm">
                                                             <input type="radio" name="print_tech" id="print-auto-scan-on" autocomplete="off" checked>Есть
                                                         </label>
@@ -1087,7 +1087,7 @@
                                         <label class="rounded-circle remove-image text-center"><span class="fa fa-remove"></span></label>
                                     </div>
                                     <div class="mr-1 float-left border rounded text-center upload-new">
-                                        <div class="row">
+                                        <div class="row h-100">
                                             <div class="col align-self-center">
                                                 <span class="fa fa-plus-circle"></span>
                                             </div>
