--- a/pages/add_ad.html
+++ b/pages/add_ad.html
@@ -1097,6 +1097,15 @@
                                 </div>
                             </div>
 
+                            <div class="form-row pt-4 pb-3">
+                                <div class="offset-3 col-lg-3">
+                                    <button type="button" class="btn btn-secondary w-100">Сохранить в черновик</button>
+                                </div>
+                                <div class="col-lg-3">
+                                    <button type="submit" class="btn btn-primary w-100">Продолжить</button>
+                                </div>
+                            </div>
+
                         </form>
                     </div>
                 </div>
