Дорабатываю страницу подачи объявления

--- a/pages/add_ad_1.html
+++ b/pages/add_ad_1.html
@@ -1097,6 +1097,22 @@
                                 </div>
                             </div>
 
+                            <div class="form-row pt-3">
+                                <div class="col-lg-3">
+                                    <label>Контакты</label>
+                                </div>
+                                <div class="col-lg-3">
+                                    <label class="mb-1" for="select-contact">Контактное лицо:</label>
+                                    <select class="form-control form-control-sm mb-2" id="select-contact">
+                                        <option value="1">Дмитрий</option>
+                                    </select>
+                                    <label class="mb-1" for="select-contact-phone">Телефон для связи:</label>
+                                    <select class="form-control form-control-sm mb-2" id="select-contact-phone">
+                                        <option value="1">+79247470169</option>
+                                    </select>
+                                </div>
+                            </div>
+
                             <div class="form-row pt-4 pb-3">
                                 <div class="offset-3 col-lg-3">
                                     <button type="button" class="btn btn-secondary w-100">Сохранить в черновик</button>
