Дорабатываю страницу подачи объявления

--- a/pages/add_ad_2.html
+++ b/pages/add_ad_2.html
@@ -229,19 +229,29 @@
             <div class="pt-3 pb-3 pl-2 pr-2 rounded">
                 <div class="row">
                     <div class="col">
-                        <div class="float-left">
-                            <img class="img-fluid" src="../img/thumb_150x190_printer_.jpg">
+                        <div class="d-inline-block float-left">
+                            <img class="img-fluid rounded" src="../img/thumb_150x190_printer_.jpg">
                         </div>
-                        <div class="float-none">
-                            <p>Заголовок объявления</p>
+                        <div class="d-inline-block float-left pl-2 h-100">
+                            <h6>Продам МФУ SCX-4200 как новый</h6>
+
                         </div>
-                        <div class="float-right">
-                            <p>Данные о продавце</p>
+                        <div class="d-inline-block float-right h-100">
+                            <h6>4 500 ₽</h6>
+                            <p class="p-1 m-0">Алексей</p>
+                            <div class="rating">
+                                <span class="fa fa-star"></span>
+                                <span class="fa fa-star"></span>
+                                <span class="fa fa-star"></span>
+                                <span class="fa fa-star-half-o"></span>
+                                <span class="fa fa-star-o"></span>
+                                <span class="ad-secondary-text">184 отзыва</span>
+                            </div>
+                            <button class="btn btn-primary btn-sm w-100 align-self-end mt-2 btn-ask">Спросить</button>
+
                         </div>
                     </div>
                 </div>
-
-
             </div>
         </div>
     </div>
