Дорабатываю страницу подачи объявления

--- a/pages/add_ad_2.html
+++ b/pages/add_ad_2.html
@@ -226,7 +226,7 @@
                 </div>
             </div>
 
-            <div class="pt-3 pb-3 pl-2 pr-2 rounded">
+            <div class="pt-3 pb-3 pl-2 pr-2 rounded ad-thumb">
                 <div class="row">
                     <div class="col">
                         <div class="d-inline-block float-left">
