--- a/pages/add_ad_2.html
+++ b/pages/add_ad_2.html
@@ -226,19 +226,28 @@
                 </div>
             </div>
 
-            <div class="pt-3 pb-3 pl-2 pr-2 rounded ad-thumb">
+            <div class="p-3 mb-2 rounded ad-thumb">
                 <div class="row">
                     <div class="col">
                         <div class="d-inline-block float-left">
                             <img class="img-fluid rounded" src="../img/thumb_150x190_printer_.jpg">
                         </div>
-                        <div class="d-inline-block float-left pl-2 h-100">
+                        <div class="d-inline-block float-left pl-2 w-50 h-100">
                             <h6>Продам МФУ SCX-4200 как новый</h6>
+                            <div>
+                                <div class="ad-secondary-text">Samsung</div>
+                                <div class="ad-secondary-text">SCX-4200</div>
+                            </div>
+                            <p>Отличный МФУ (принтер, сканер и копир, 3 в 1) для учебы и офиса!</p>
+                            <div>
+
+                            </div>
 
                         </div>
                         <div class="d-inline-block float-right h-100">
                             <h6>4 500 ₽</h6>
-                            <p class="p-1 m-0">Алексей</p>
+                            <a href="#page">Алексей</a>
+
                             <div class="rating">
                                 <span class="fa fa-star"></span>
                                 <span class="fa fa-star"></span>
@@ -247,7 +256,8 @@
                                 <span class="fa fa-star-o"></span>
                                 <span class="ad-secondary-text">184 отзыва</span>
                             </div>
-                            <button class="btn btn-primary btn-sm w-100 align-self-end mt-2 btn-ask">Спросить</button>
+                            <button type="button" class="btn btn-primary btn-sm w-100 mt-2 btn-ask">Спросить</button>
+                            <button type="button" class="btn btn-success btn-sm w-100 mt-1 btn-ask">Купить</button>
 
                         </div>
                     </div>
