--- a/pages/add_ad_2.html
+++ b/pages/add_ad_2.html
@@ -203,7 +203,57 @@
         <div class="col-lg-3">
             <label>Предпросмотр:</label>
         </div>
-        <div class="col-9">
+        <div class="col-lg-9">
+
+            <div class="row mb-2 pt-3 pb-3 rounded ad-thumb">
+                <div class="col-3 align-self-start">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam, consequuntur esse et facilis fugiat ipsam labore magnam necessitatibus nesciunt nisi odit provident quo reiciendis! Ab atque delectus deleniti doloremque, doloribus eaque earum esse eum ex facilis fugiat fugit in iure libero minus nemo nobis omnis placeat qui quidem reiciendis sit ut. Commodi, earum unde?
+                </div>
+                <div class="col-6 align-self-center">
+                    One of three columns
+                </div>
+                <div class="col-3 align-self-end">
+                    One of three columns
+                </div>
+            </div>
+
+            <div class="row mb-2 pt-3 pb-3 rounded ad-thumb">
+                <div class="col-3">
+                    <img class="img-fluid rounded" src="../img/thumb_150x190_printer_.jpg">
+                </div>
+                <div class="col-6 pl-2">
+                    <div class="row h-100">
+                        <div class="col-12">
+                            <h6>Продам МФУ SCX-4200 как новый</h6>
+                            <div>
+                                <div class="ad-secondary-text">Samsung</div>
+                                <div class="ad-secondary-text">SCX-4200</div>
+                            </div>
+                            <p>Отличный МФУ (принтер, сканер и копир, 3 в 1) для дома и учебы! </p>
+                        </div>
+                        <div class="col-12 align-items-end">
+                            <span class="ad-secondary-text align-text-bottom">г. Самара, ул. Красногвардейская дом 20</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <h6>4 500 ₽</h6>
+                    <a href="#page">Алексей</a>
+
+                    <div class="rating">
+                        <span class="fa fa-star"></span>
+                        <span class="fa fa-star"></span>
+                        <span class="fa fa-star"></span>
+                        <span class="fa fa-star-half-o"></span>
+                        <span class="fa fa-star-o"></span>
+                        <span class="ad-secondary-text">184 отзыва</span>
+                    </div>
+                    <button type="button" class="btn btn-primary btn-sm w-100 mt-2 btn-ask">Спросить</button>
+                    <button type="button" class="btn btn-success btn-sm w-100 mt-1 btn-ask">Купить</button>
+
+                </div>
+            </div>
+
             <div class="row">
                 <div class="col-12 ads ads_list">
                     <div class="ads_wrapper">
@@ -226,43 +276,6 @@
                 </div>
             </div>
 
-            <div class="p-3 mb-2 rounded ad-thumb">
-                <div class="row">
-                    <div class="col">
-                        <div class="d-inline-block float-left">
-                            <img class="img-fluid rounded" src="../img/thumb_150x190_printer_.jpg">
-                        </div>
-                        <div class="d-inline-block float-left pl-2 w-50 h-100">
-                            <h6>Продам МФУ SCX-4200 как новый</h6>
-                            <div>
-                                <div class="ad-secondary-text">Samsung</div>
-                                <div class="ad-secondary-text">SCX-4200</div>
-                            </div>
-                            <p>Отличный МФУ (принтер, сканер и копир, 3 в 1) для учебы и офиса!</p>
-                            <div>
-
-                            </div>
-
-                        </div>
-                        <div class="d-inline-block float-right h-100">
-                            <h6>4 500 ₽</h6>
-                            <a href="#page">Алексей</a>
-
-                            <div class="rating">
-                                <span class="fa fa-star"></span>
-                                <span class="fa fa-star"></span>
-                                <span class="fa fa-star"></span>
-                                <span class="fa fa-star-half-o"></span>
-                                <span class="fa fa-star-o"></span>
-                                <span class="ad-secondary-text">184 отзыва</span>
-                            </div>
-                            <button type="button" class="btn btn-primary btn-sm w-100 mt-2 btn-ask">Спросить</button>
-                            <button type="button" class="btn btn-success btn-sm w-100 mt-1 btn-ask">Купить</button>
-
-                        </div>
-                    </div>
-                </div>
-            </div>
         </div>
     </div>
 
