Дорабатываю страницу подачи объявления

--- a/pages/add_ad_2.html
+++ b/pages/add_ad_2.html
@@ -209,8 +209,16 @@
                 <div class="col-3 align-self-start">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam, consequuntur esse et facilis fugiat ipsam labore magnam necessitatibus nesciunt nisi odit provident quo reiciendis! Ab atque delectus deleniti doloremque, doloribus eaque earum esse eum ex facilis fugiat fugit in iure libero minus nemo nobis omnis placeat qui quidem reiciendis sit ut. Commodi, earum unde?
                 </div>
-                <div class="col-6 align-self-center">
-                    One of three columns
+                <div class="col-6">
+                    <div class="row h-100">
+                        <div class="col-12 align-self-start">
+                            One of three columns
+                            1
+                        </div>
+                        <div class="col-12 align-self-end">
+                            2
+                        </div>
+                    </div>
                 </div>
                 <div class="col-3 align-self-end">
                     One of three columns
